--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=postgres:///python_getting_started
+#DATABASE_URL=postgres:///python_getting_started
+DATABASE_URL=mysql://funcpred:funcpred@tungsteno:3306/funcpred
