--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 dj-database-url==0.4.0
 Django==1.9.2
+django-autocomplete-light==3.1.0
 gunicorn==19.4.5
-mysql==0.0.1
 MySQL-python==1.2.5
+pyvfork==1.0
+wheel==0.24.0
 whitenoise==2.0.6
