--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 dj-database-url==0.4.0
 Django==1.9.2
-django-autocomplete-light==3.1.0
+django-appconf==1.0.1
+django-tables2==1.1.2
 gunicorn==19.4.5
 MySQL-python==1.2.5
 pyvfork==1.0
+six==1.10.0
 wheel==0.24.0
 whitenoise==2.0.6
