--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,7 @@ Django==1.9.2
 django-appconf==1.0.1
 django-tables2==1.1.2
 gunicorn==19.4.5
-MySQL-python==1.2.5
-pyvfork==1.0
+#MySQL-python==1.2.5 #installato via apt-get install python-mysqldb
 six==1.10.0
 wheel==0.24.0
 whitenoise==2.0.6
