Changed the webmaster email

--- a/apache.conf
+++ b/apache.conf
@@ -16,7 +16,7 @@
 		</Files>
 	</Directory>
 
-	ServerAdmin webmaster@localhost
+	ServerAdmin ivan.molineris@gmail.com
 	DocumentRoot /var/www/html
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
