--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,11 @@ Cheetah==2.4.4
 Django==1.9.4
 django-appconf==1.0.1
 dj-database-url==0.4.0
-MySQL-python==1.2.5
+#MySQL-python==1.2.5
 PyYAML==3.11
 argparse==1.2.1
 boto==2.34.0
-chardet==2.3.0
+chardet
 colorama==0.3.2
 configobj==5.0.6
 decorator==3.4.0
@@ -22,22 +22,23 @@ html5lib==0.999
 ipython==2.3.0
 jsonpatch==1.3
 jsonpointer==1.0
-lxml==3.4.0
+#lxml==3.4.0
 #mod-python==3.3.1
 #mysql-connector-python==1.2.3
 #mysql-utilities==1.3.5
+mysqlclient
 oauth==1.0.1
 paramiko==1.15.1
 pexpect==3.2
 prettytable==0.7.2
 pycrypto==2.6.1
 pyserial==2.6
-pysqlite==2.6.3
+#pysqlite==2.6.3
 #python-apt==0.9.3.12
 requestbuilder==0.2.3
 requests==2.4.3
 simplegeneric==0.8.1
-six==1.10.0
+six==1.12.0
 urllib3==1.9.1
 virtualenv==1.11.6
 whitenoise==2.0.6
